--- a/assets/css/2-layouts/content_fale_conosco.scss
+++ b/assets/css/2-layouts/content_fale_conosco.scss
@@ -136,3 +136,110 @@
 
 
 }
+
+
+/* LAPTOP - 1024px*/ 
+@include main.breakpoint(smashLaptop) {
+
+  .faleConosco {
+    & .__subTitle {
+      margin-top: 30px;
+      margin-bottom: 20px;
+  
+      & h2 {
+        font-size: reset.toRem(30);
+      }
+  
+  
+    }
+  
+    & .formulario {
+  
+      & .container {
+        position: relative;
+        left: 0;
+  
+        & .__display {
+          flex-wrap: wrap;
+          gap: 30px;
+  
+  
+          & .__form {
+            width: 100%;
+            padding: 30px 40px 0 40px;
+          }
+  
+          & .__information {
+            width: 100%;
+  
+            & .__item {
+              padding: 63px 70px 63px 61px;
+              background-color: #fff;
+              border-radius: 20px;
+              margin-bottom: 20px;
+              @include main.FlexBetCen;
+  
+              &:first-child {
+                margin-bottom: 65px;
+              }
+  
+              &:nth-child(3) p span {
+                display: block;
+                margin-bottom: 45px;
+              }
+  
+              & .txt {
+                width: 75%;
+  
+                & p {
+                  margin: 0;
+                  line-height: 35px;
+  
+                  & a {
+                    color: main.$ColorOne;
+                    font-weight: 600;
+                  }
+                }
+              }
+            }
+  
+            & .__social {
+              @include main.FlexCenCen;
+              flex-direction: column;
+  
+              & span {
+                font-size: reset.toRem(18);
+                color: main.$ColorOne;
+                display: block;
+                text-align: center;
+                margin-bottom: 30px;
+                font-weight: 600;
+              }
+  
+              & ul {
+                display: flex;
+                gap: 25px;
+                padding-left: 15px;
+  
+                & li {
+                  & img {
+                    &:hover {
+                      filter: main.$ColorMain;
+                    }
+                  }
+                }
+              }
+            }
+          }
+  
+        }
+      }
+    }
+  
+    & .maps iframe {
+      box-shadow: 0px 10px 25px #00000029;
+    }
+  
+  
+  }
+}
