--- a/assets/css/2-layouts/content_planos_valores.scss
+++ b/assets/css/2-layouts/content_planos_valores.scss
@@ -11,6 +11,7 @@
   & .__textOne {
     text-align: center;
     margin-bottom: 130px;
+	margin-top: 25px;
 
     	& h2 {
 			font-size: reset.toRem(40);
@@ -119,4 +120,101 @@
 		letter-spacing: 0.5px;
 	}
   }
+}
+
+/* LAPTOP - 1024px*/ 
+@include main.breakpoint(smashLaptop) {
+	.plans_values {
+		& .__textOne {
+		  margin-bottom: 60px;
+		  margin-top: 15px;
+	  
+			  & h2 {
+				  font-size: reset.toRem(30);
+				  margin-bottom: 30px;
+			  }
+	  
+			  & h3 {
+				  font-size: reset.toRem(20);
+				  margin-bottom: 25px;
+
+				  & br {
+					display: none;
+				  }
+			  }
+	  
+			  & p {
+				  margin-bottom:25px;
+			  }
+		}
+	  
+	  
+		& .incluse {
+	  
+			  & h4 {
+				  font-size: reset.toRem(20);
+
+				  & br {
+					display: none;
+				  }
+			  }
+		}
+	
+	  
+		& .attComercial {
+		  text-align: right;
+		}
+	  }
+	  
+}
+
+
+/* TABLET BIG - 900px*/ 
+@include main.breakpoint(smashTabletBig) {
+	.plans_values {
+		& .getItNow {
+			margin-top: 40px;
+			padding-bottom: 15px;
+		
+			& .__display {
+				width: 100%;
+				top: 0px;
+		
+				& .__txt {
+					width: 100%;
+					padding: 30px 0 0 0;
+					margin-left: 0;
+					text-align: center;
+		
+					& h2 {
+						font-size: reset.toRem(30);
+						margin-bottom: 20px;
+					}
+				}
+		
+				& .__phone {
+					height: auto;
+					padding: 15px 20px;
+					width: 330px;
+					margin: 0 auto;
+					
+					& div {
+						margin-left: 0;
+						font-size: reset.toRem(22);
+					}
+		
+		
+					& img {
+						display: none;
+					}
+				}
+			}
+		}
+
+		& .attComercial {
+			width: 100%;
+			text-align: center;
+			margin: 15px 0;
+		  }
+	}
 }
